# wsi-preprocessing

./: .gitignore  README.md  example.py  pyproject.toml  requirements.txt
wsi_preprocessing/: __init__.py  filters.py  slides.py  tiles.py  timer.py
