[tool.poetry]
name = "wsi-preprocessing"
version = "0.1.0"
description = "A thin wrapper around pyvips for preprocessing pathology whole-slide images (WSI) towards deep learning"
authors = ["Lucas Amaro <lucasrla@users.noreply.github.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/lucasrla/wsi-preprocessing"

[tool.poetry.dependencies]
python = "^3.6.1"
pyvips = "^2.1.12"
pandas = "^1.1.1"
wsi-tile-cleanup = {git = "https://github.com/lucasrla/wsi-tile-cleanup"}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
